tests/fixtures/invalid/i005/unknown_scheme.spec
ref figma.frame:abc123 "Design Mockup"
